--- a/data-science.html
+++ b/data-science.html
@@ -67,11 +67,11 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692240940-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692240940-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -119,11 +119,11 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<h5><a href='https://medlanes.join.com/jobs/262494-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -151,7 +151,7 @@ intelligent, learning algorithm. The algorithm will ingest market analytics and?
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
+<h5><a href='https://jobs.lever.co/perpetualabs.com/e3c1df80-de35-4f78-8ae7-2dd3f6ea79be/apply'>Perpetua Labs - Data Scientist, Product - Toronto</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Data Scientist, Product - Toronto. Toronto. Product. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -164,7 +164,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -184,7 +184,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -330,7 +330,7 @@ federal?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gettyimages/job/oO1Aafwj'>Getty Images Careers - Data Scientist - Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gettyimages/job/oO1Aafwj'>Getty Images Careers - Data Scientist - Insights</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -377,7 +377,7 @@ Marketing?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-science-internship-geo-science-team-data-science-department-9689'>Data Science Internship - Geo Science Team (Data Science Department) - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-science-internship-geo-science-team-data-science-department-9689'>Data Science Internship - Geo Science Team (Data Science Department) - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -389,7 +389,7 @@ Marketing?...</p>
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
@@ -458,7 +458,7 @@ working?...</p>
 order to run and evaluate experiments and using machine learning techniques in
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/9rpipmm4qyi7sfy8wtsg7rip8e'>Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/9rpipmm4qyi7sfy8wtsg7rip8e'>Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
