--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/chainalysis/jobs/4371069002'>Job Application for Product Data Analyst at Chainalysis</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/bridgepartners/job/olkCafwb'>Bridge Partners Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -113,6 +117,23 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
+<h5><a href='https://aginic.workable.com/jobs/1054483'>Jobs: Graduate Data Analyst (Canberra) - Apply online - Aginic</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 17, 2019 ... Apply online for the job of Graduate Data Analyst (Canberra) at Aginic.</p>
+<hr/>
+<h5><a href='https://sybo-games.workable.com/jobs/1076318'>Game Data Analyst - Apply online - SYBO Games - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 15, 2019 ... Apply online for the job of Game Data Analyst at SYBO Games.</p>
+<hr/>
+<h5><a href='https://stuart.workable.com/j/3D3DEEAB92?viewed=true'>Stuart - Jobs: Operations Data Analyst Intern (new business unit ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
+Stuart.</p>
+<hr/>
+<h5><a href='https://telegraph.workable.com/j/0E9D1E888A?viewed=true'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Apply online for the job of Senior Data Analyst, Product at The Telegraph.</p>
+<hr/>
 <h5><a href='https://owlin.recruitee.com/o/data-analyst-parttime'>
       Data analyst - part-time - Owlin
     </a></h5> 
@@ -172,7 +193,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/413452536A'>Aginic - Jobs: Data Analyst (Brisbane) - Apply online</a></h5> 
+<h5><a href='https://aginic.workable.com/j/413452536A'>Aginic - Jobs: Data Analyst (Brisbane) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -184,7 +205,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Canberra Canberra Canberra Canberra</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Modis3/743999692206865-senior-data-analyst'>Modis Senior Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Modis3/743999692206865-senior-data-analyst'>Modis Senior Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -218,7 +239,7 @@ originations and servicing systems and data bases. The analyst will then be able
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paylocity/0941e3eb-0208-4b97-bd51-ea1884125e2d/apply'>Paylocity - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/paylocity/0941e3eb-0208-4b97-bd51-ea1884125e2d/apply'>Paylocity - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
 not subject you to adverse treatment). Our company values diversity.</p>
@@ -436,7 +457,7 @@ emergent technologies, including the transition to digitized data (vs. paper-bas
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oprAafwk&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nK6vPKwp'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oprAafwk&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nK6vPKwp'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -451,27 +472,6 @@ emergent technologies, including the transition to digitized data (vs. paper-bas
 <h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
-support for the implementation of data models and the reporting of clinical trials?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/averinc/jobs/1785319'>Job Application for Senior Healthcare Data Analyst at Aver Inc.</a></h5> 
-<p><span class="badge badge-light">Columbus, Ohio</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/brandwatch/job/o9Kuafwh'>Brandwatch Careers - Junior Social Media Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n95qPKwI'>Premier Research Careers - Senior Biostatistician</a></h5> 
-<p><span class="badge badge-light">Madrid</span></p>
-<p>Posted on:: 2019-07-20</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dynamit/e877c807-4ace-413e-9d0c-df01ce8499a6'>Dynamit - Junior Data Analyst</a></h5> 
-<p><span class="badge badge-light">Columbus, Ohio</span></p>
-<p>Posted on: 2019-07-20</p>
 <hr/>
 
 
